k8s/tgcf-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tgcf
    app.kubernetes.io/instance: tgcfbot
    k8slens-edit-resource-version: v1
  name: tgcf-deployment
  namespace: ittools
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tgcf
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tgcf
    spec:
      containers:
        - env:
            - name: PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: PASSWORD
                  name: tgcf-config
            - name: BINBASE_URL
              valueFrom:
                configMapKeyRef:
                  key: BINBASE_URL
                  name: tgcf-config
          image: cpanel10x/tgcf
          imagePullPolicy: Always
          name: tgcf
          ports:
            - containerPort: 8501
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app/tgcf.configmap.json
              name: tgcf-env
              subPath: tgcf.configmap.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: tgcf-config
          name: tgcf-env
