k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tgcf-svc
  namespace: ittools
spec:
  ports:
    - port: 8501
      protocol: TCP
      targetPort: 8501
  selector:
    app: tgcf
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
